# data-skills-analysis

./: .gitignore  Makefile  README.md  items.json  pyproject.toml  scrapy.cfg  setup.cfg
analysis/: data_analysis.ipynb  data_cleaning.ipynb  skill_clean.json
nlp/: model_test.ipynb  ner_config.cfg  ner_preprocess.py  textcat_config.cfg  textcat_preprocess.py
nlp/annotation/: ner_data.py  textcat_data.py
nlp/processed_data/: ner_dev.spacy  ner_train.spacy  textcat_dev.spacy  textcat_train.spacy
skills_crawling/: items.py  middlewares.py  pipelines.py  settings.py
skills_crawling/spiders/: skills_spider.py
