[metadata]
name = dataanalyst_skills
author = Elvis Tsang
version = 0.0.1

classifier = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = 
    >=3.6
install_requires = 
    scrapy
    spacy

[options.extras_require]
testing = 
     pytest >= 7.0
     pytest-cov >= 3.0
    #  tox >= 3.25